# bipedal_control

./: .gitignore  LICENSE  README.md
bipedal_common/: CMakeLists.txt  package.xml
bipedal_common/include/bipedal_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
bipedal_controllers/: CMakeLists.txt  bipedal_controller_plugin.xml  package.xml
bipedal_controllers/cfg/: BipedalControllerParams.cfg  InitialJointControllerParams.cfg
bipedal_controllers/config/: controllers.yaml
bipedal_controllers/include/bipedal_controllers/: BipedalController.h  BipedalControllerVisualizer.h  InitialJointController.h  SafetyChecker.h  TargetTrajectoriesPublisher.h  UpperJointController.h
bipedal_controllers/include/bipedal_controllers/debug/: DebugPublisher.h
bipedal_controllers/launch/: load_controller.launch
bipedal_controllers/msg/: TrackingError.msg
bipedal_controllers/rqt/: trackingErr.perspective
bipedal_controllers/script/: restart_gazebo.py  switch_joint_init_pos_controller.py
bipedal_controllers/src/: BipedalController.cpp  BipedalControllerVisualizer.cpp  InitialJointController.cpp  TargetTrajectoriesPublisher.cpp  UpperJointController.cpp
bipedal_controllers/src/debug/: DebugPublisher.cpp
bipedal_estimation/: CMakeLists.txt  package.xml
bipedal_estimation/include/bipedal_estimation/: FromTopicEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
bipedal_estimation/src/: FromTopicEstimate.cpp  StateEstimateBase.cpp
bipedal_gazebo/: CMakeLists.txt  bipedal_hw_sim_plugin.xml  package.xml
bipedal_gazebo/config/: default.yaml
bipedal_gazebo/include/bipedal_gazebo/: BipedalHWSim.h
bipedal_gazebo/launch/: empty_world.launch
bipedal_gazebo/src/: BipedalHWSim.cpp
bipedal_hw/: CMakeLists.txt  package.xml
bipedal_hw/include/bipedal_hw/: BipedalHW.h  BipedalHWLoop.h
bipedal_hw/src/: BipedalHW.cpp  BipedalHWLoop.cpp
bipedal_mujoco/: CMakeLists.txt  package.xml
bipedal_mujoco/include/bipedal_mujoco/hw/: BipedalMujocoHW.h  BipedalMujocoHWLoop.h
bipedal_mujoco/src/: main.cc
bipedal_mujoco/src/hw/: BipedalMujocoHW.cpp  BipedalMujocoHWLoop.cpp
bipedal_mujoco/src/mujoco/: simulate.cc
bipedal_robot_description/h1_description/urdf/: h1_with_sole.urdf
bipedal_robot_example/: README.md
bipedal_robot_example/hunter/legged_hunter_config/: CMakeLists.txt  package.xml
bipedal_robot_example/hunter/legged_hunter_config/launch/: bipedal_robot_sqp.launch
bipedal_robot_example/hunter/legged_hunter_description/launch/: empty_world.launch
bipedal_robot_example/hunter/legged_hunter_description/urdf/: hunter_sim.urdf
bipedal_robot_example/hunter/legged_hunter_ocs2_config/: CMakeLists.txt  package.xml
bipedal_robot_example/openloong_description/: CMakeLists.txt  package.xml
bipedal_robot_example/openloong_description/config/: hw_gazebo.yaml  ros_controllers.yaml
bipedal_robot_example/openloong_description/config/command/: reference.info
bipedal_robot_example/openloong_description/config/task/: task.info
bipedal_robot_example/openloong_description/launch/: bipedal_robot_sqp.launch  bringup_gazebo.launch  display.launch  gazebo.launch  load_controllers.launch
bipedal_robot_example/openloong_description/meshes/: Link_arm_l_07.STL  Link_arm_r_07.STL
bipedal_robot_example/openloong_description/mjcf/: AzureLoong.xml  AzureLoong_float.xml  model_plot.m  scene.xml  scene_board.xml  scene_float.xml  scene_white.xml
bipedal_robot_example/openloong_description/rviz/: display.rviz
bipedal_robot_example/openloong_description/script/: create_urdf_for_gazebo.py  print_joints.py  restart_gazebo.py
bipedal_robot_example/openloong_description/test/: test_ee.cpp  test_ee.launch  test_pino.cpp
bipedal_robot_example/openloong_description/urdf/: AzureLoong.urdf  AzureLoong_gazebo.urdf  AzureLoong_simplified.urdf  AzureLoong_with_sole.urdf
bipedal_robot_example/unitree_h1/h1_description/config/: hw_sim.yaml  mj.yaml
bipedal_robot_example/unitree_h1/h1_description/launch/: display.launch  gazebo.launch  (+1 more)
bipedal_robot_example/unitree_h1/h1_ocs2_config/: CMakeLists.txt  package.xml
bipedal_wbc/: CMakeLists.txt  README.md  package.xml
bipedal_wbc/include/bipedal_wbc/: Task.h  WbcBase.h  WeightedWbc.h
bipedal_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
ocs2_bipedal_robot/: CMakeLists.txt  READMED.md  package.xml
ocs2_bipedal_robot/config/command/: gait.info  reference.info
ocs2_bipedal_robot/config/mpc/: task.info
ocs2_bipedal_robot/include/ocs2_bipedal_robot/: BipedalRobotInterface.h  BipedalRobotPreComputation.h  package_path.h.in
ocs2_bipedal_robot/src/: BipedalRobotInterface.cpp  BipedalRobotPreComputation.cpp
ocs2_bipedal_robot/src/common/: ModelSettings.cpp
ocs2_bipedal_robot/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
ocs2_bipedal_robot/src/dynamics/: BipedalRobotDynamicsAD.cpp
ocs2_bipedal_robot/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
ocs2_bipedal_robot/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
ocs2_bipedal_robot/src/initialization/: BipedalRobotInitializer.cpp
ocs2_bipedal_robot/src/reference_manager/: SwitchedModelReferenceManager.cpp
ocs2_bipedal_robot_ros/: CMakeLists.txt  READMED.md  package.xml
ocs2_bipedal_robot_ros/include/ocs2_bipedal_robot_ros/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
ocs2_bipedal_robot_ros/include/ocs2_bipedal_robot_ros/visualization/: BipedalRobotVisualizer.h
ocs2_bipedal_robot_ros/launch/: bipedal_robot_ddp.launch  bipedal_robot_sqp.launch  test_dummy.launch
ocs2_bipedal_robot_ros/rviz/: bipedal_robot.rviz
ocs2_bipedal_robot_ros/src/: BipedalRobotDdpMpcNode.cpp  BipedalRobotDummyNode.cpp  BipedalRobotGaitCommandNode.cpp  BipedalRobotPoseCommandNode.cpp  BipedalRobotSqpMpcNode.cpp
ocs2_bipedal_robot_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_bipedal_robot_ros/src/visualization/: BipedalRobotVisualizer.cpp
(+40 files in other folders)
