<?xml version="1.0"?>
<package format="2">
  <name>bipedal_controllers</name>
  <version>0.0.0</version>
  <description>The bipedal_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xiaobaige@todo.todo">xiaobaige</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/bipedal_controllers</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bipedal_common</build_depend>
  <build_depend>bipedal_estimation</build_depend>
  <build_depend>bipedal_wbc</build_depend>
  <build_depend>ocs2_bipedal_robot</build_depend>
  <build_depend>ocs2_bipedal_robot_ros</build_depend>
  <build_depend>ocs2_self_collision_visualization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>bipedal_common</build_export_depend>
  <build_export_depend>bipedal_estimation</build_export_depend>
  <build_export_depend>bipedal_wbc</build_export_depend>
  <build_export_depend>ocs2_bipedal_robot</build_export_depend>
  <build_export_depend>ocs2_bipedal_robot_ros</build_export_depend>
  <build_export_depend>ocs2_self_collision_visualization</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>bipedal_common</exec_depend>
  <exec_depend>bipedal_estimation</exec_depend>
  <exec_depend>bipedal_wbc</exec_depend>
  <exec_depend>ocs2_bipedal_robot</exec_depend>
  <exec_depend>ocs2_bipedal_robot_ros</exec_depend>
  <exec_depend>ocs2_self_collision_visualization</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>angles</depend>
  <depend>controller_interface</depend>
  <exec_depend>controller_manager</exec_depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_core</depend>

  <depend>bipedal_gazebo</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/bipedal_controller_plugin.xml"/>
  </export>
</package>
