<?xml version="1.0"?>
<package format="2">
  <name>ocs2_bipedal_robot_ros</name>
  <version>0.0.0</version>
  <description>The ocs2_bipedal_robot_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xiaobaige@todo.todo">xiaobaige</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ocs2_bipedal_robot_ros</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>ocs2_bipedal_robot</build_depend>
  <build_depend>ocs2_centroidal_model</build_depend>
  <build_depend>ocs2_core</build_depend>
  <build_depend>ocs2_ddp</build_depend>
  <build_depend>ocs2_ipm</build_depend>
  <build_depend>ocs2_mpc</build_depend>
  <build_depend>ocs2_msgs</build_depend>
  <build_depend>ocs2_oc</build_depend>
  <build_depend>ocs2_pinocchio_interface</build_depend>
  <build_depend>ocs2_robotic_assets</build_depend>
  <build_depend>ocs2_robotic_tools</build_depend>
  <build_depend>ocs2_ros_interfaces</build_depend>
  <build_depend>ocs2_sqp</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>ocs2_bipedal_robot</build_export_depend>
  <build_export_depend>ocs2_centroidal_model</build_export_depend>
  <build_export_depend>ocs2_core</build_export_depend>
  <build_export_depend>ocs2_ddp</build_export_depend>
  <build_export_depend>ocs2_ipm</build_export_depend>
  <build_export_depend>ocs2_mpc</build_export_depend>
  <build_export_depend>ocs2_msgs</build_export_depend>
  <build_export_depend>ocs2_oc</build_export_depend>
  <build_export_depend>ocs2_pinocchio_interface</build_export_depend>
  <build_export_depend>ocs2_robotic_assets</build_export_depend>
  <build_export_depend>ocs2_robotic_tools</build_export_depend>
  <build_export_depend>ocs2_ros_interfaces</build_export_depend>
  <build_export_depend>ocs2_sqp</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>ocs2_bipedal_robot</exec_depend>
  <exec_depend>ocs2_centroidal_model</exec_depend>
  <exec_depend>ocs2_core</exec_depend>
  <exec_depend>ocs2_ddp</exec_depend>
  <exec_depend>ocs2_ipm</exec_depend>
  <exec_depend>ocs2_mpc</exec_depend>
  <exec_depend>ocs2_msgs</exec_depend>
  <exec_depend>ocs2_oc</exec_depend>
  <exec_depend>ocs2_pinocchio_interface</exec_depend>
  <exec_depend>ocs2_robotic_assets</exec_depend>
  <exec_depend>ocs2_robotic_tools</exec_depend>
  <exec_depend>ocs2_ros_interfaces</exec_depend>
  <exec_depend>ocs2_sqp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
